Fix errore logout admin, pulizia e commento del codice e gestione di alcune eccezioni